@@ -2,6 +2,7 @@ Changes for 0.5.0:
 
 * New feature: Implemented ra::strings::trim() and ra::strings::reverse().
 * New feature: Generics, a.k.a. popular templates.
+* Fixed issue #5: String format function.
 
 Changes for 0.4.1:
 
